--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Vue Hackernews 2.0",
-  "short_name": "Vue HN",
+  "name": "VueBlog",
+  "short_name": "VueBlog",
   "icons": [{
       "src": "/public/logo-120.png",
       "sizes": "120x120",
