--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "formidable": "^1.1.1",
+    "highlight.js": "^9.12.0",
     "jsdom": "^11.0.0",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.6",
