--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "axios": "^0.16.1",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "cross-env": "^4.0.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "formidable": "^1.1.1",
     "highlight.js": "^9.12.0",
