--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
     "cross-env": "^4.0.0",
     "es6-promise": "^4.1.0",
     "express": "^4.15.2",
-    "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "formidable": "^1.1.1",
     "highlight.js": "^9.12.0",
+    "js-cookie": "^2.1.4",
     "jsdom": "^11.1.0",
+    "jsonwebtoken": "^7.4.1",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.6",
     "mongodb": "^2.2.26",
-    "node-localstorage": "^1.3.0",
     "serve-favicon": "^2.4.1",
     "simplemde": "^1.11.2",
     "vue": "^2.3.2",
