fix modify password bug

--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,5 @@
   "start_url": "/",
   "background_color": "#f2f3f5",
   "display": "standalone",
-  "theme_color": "#f60"
+  "theme_color": "#26272B"
 }
