--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^2.3.2",
     "vue-router": "^2.5.0",
     "vue-server-renderer": "^2.3.2",
+    "vue-toasted": "^1.0.28",
     "vuex": "^2.3.1",
     "vuex-router-sync": "^4.1.2"
   },
