--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,10 @@
       "src": "/public/logo-384.png",
       "sizes": "384x384",
       "type": "image/png"
+    },{
+      "src": "/public/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }],
   "start_url": "/",
   "background_color": "#f2f3f5",
