--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "VueBlog",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A vuejs and nodejs project",
   "author": "qq22337383@gmail.com",
   "license": "GPL-3.0",
@@ -30,6 +30,7 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "formidable": "^1.1.1",
+    "gitment": "0.0.3",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.1.4",
     "jsdom": "^11.1.0",
