--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "VueBlog",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A vuejs and nodejs project",
   "author": "qq22337383@gmail.com",
   "license": "GPL-3.0",
@@ -10,7 +10,8 @@
     "start": "cross-env NODE_ENV=production node server",
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "lint": "eslint --ext .js,.vue src"
   },
   "engines": {
     "node": ">=7.0",
@@ -50,12 +51,23 @@
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.9.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.4.0",
     "cors": "^2.8.3",
     "css-loader": "^0.28.0",
+    "eslint": "^4.5.0",
+    "eslint-config-promise": "^1.1.7",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.1",
@@ -63,8 +75,6 @@
     "node-sass": "^4.5.2",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.5",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.10.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.1",
