--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "VueBlog",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A vuejs and nodejs project",
   "author": "qq22337383@gmail.com",
   "license": "GPL-3.0",
@@ -38,9 +38,9 @@
     "jsonwebtoken": "^7.4.1",
     "lru-cache": "^4.0.2",
     "marked": "^0.3.6",
+    "mavon-editor": "^2.2.6",
     "mongodb": "^2.2.26",
     "serve-favicon": "^2.4.1",
-    "simplemde": "^1.11.2",
     "vue": "^2.4.1",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.4.1",
