--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.4.4",
+    "vue-vb-toast": "^0.1.0",
     "vuex": "^2.4.0",
     "vuex-router-sync": "^4.3.1"
   },
