--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "VueBlog",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A vuejs and nodejs project",
   "author": "qq22337383@gmail.com",
   "license": "GPL-3.0",
@@ -37,14 +37,13 @@
     "jsonwebtoken": "^7.4.1",
     "lru-cache": "^4.1.1",
     "marked": "^0.3.6",
-    "mavon-editor": "^2.2.6",
     "mongodb": "^2.2.26",
     "serve-favicon": "^2.4.4",
+    "top-editor": "^0.0.3",
+    "top-toast": "^0.0.3",
     "vue": "^2.4.4",
-    "vue-gitment": "^0.1.1",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.4.4",
-    "vue-vb-toast": "^0.1.1",
     "vuex": "^2.4.0",
     "vuex-router-sync": "^4.3.1"
   },
