--- a/package.json
+++ b/package.json
@@ -1,88 +1,40 @@
 {
-  "name": "VueBlog",
-  "version": "1.2.1",
-  "description": "A vuejs and nodejs project",
-  "author": "qq22337383@gmail.com",
-  "license": "GPL-3.0",
+  "name": "vueblog-v2",
+  "version": "1.0.0",
+  "description": "Nuxt.js project",
+  "author": "wmui",
   "private": true,
   "scripts": {
-    "dev": "node server",
-    "start": "cross-env NODE_ENV=production node server",
-    "build": "rimraf dist && npm run build:client && npm run build:server",
-    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
-    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
-    "lint": "eslint --ext .js,.vue src"
+    "dev": "backpack dev",
+    "build": "nuxt build && backpack build",
+    "start": "cross-env NODE_ENV=production node build/main.js",
+    "precommit": "npm run lint",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
-  "engines": {
-    "node": ">=7.0",
-    "npm": ">=4.0"
-  },
-  "keywords": [
-    "vue",
-    "vue-ssr",
-    "vueblog"
-  ],
   "dependencies": {
-    "axios": "^0.16.1",
-    "compression": "^1.7.0",
-    "cookie-parser": "^1.4.3",
-    "cross-env": "^5.0.5",
-    "es6-promise": "^4.1.1",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "formidable": "^1.1.1",
-    "highlight.js": "^9.12.0",
-    "js-cookie": "^2.1.4",
-    "jsdom": "^11.1.0",
-    "jsonwebtoken": "^7.4.1",
-    "lru-cache": "^4.1.1",
+    "@nuxtjs/axios": "^4.4.0",
+    "@nuxtjs/component-cache": "^1.1.0",
+    "@nuxtjs/pwa": "^1.0.2",
+    "axios": "^0.17.0",
+    "cross-env": "^5.0.1",
+    "koa": "^2.3.0",
     "marked": "^0.3.6",
-    "mongodb": "^2.2.26",
-    "serve-favicon": "^2.4.4",
-    "top-editor": "^0.0.3",
-    "top-toast": "^0.0.3",
-    "vue": "^2.4.4",
-    "vue-router": "^2.7.0",
-    "vue-server-renderer": "^2.4.4",
-    "vuex": "^2.4.0",
-    "vuex-router-sync": "^4.3.1"
+    "nuxt": "^1.0.0-rc3",
+    "source-map-support": "^0.4.15"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-component": "^0.9.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.4.0",
-    "cors": "^2.8.3",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.5.0",
-    "eslint-config-promise": "^1.1.7",
+    "babel-eslint": "^7.1.1",
+    "backpack-core": "^0.3.0",
+    "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "file-loader": "^0.11.2",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "glob": "^7.1.2",
-    "http-proxy-middleware": "^0.17.4",
-    "node-sass": "^4.5.2",
-    "rimraf": "^2.6.2",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.5",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "webpack-merge": "^4.0.0",
-    "webpack-node-externals": "^1.6.0"
+    "scmp": "^2.0.0"
   }
 }
