--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cross-env": "^5.0.1",
     "highlight.js": "^9.12.0",
     "koa": "^2.3.0",
-    "marked": "^0.3.6",
+    "markdown-it": "^8.4.0",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15",
     "top-editor": "^0.0.3"
