--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "vueblog",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A blog system",
   "author": "wmui",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
+    "dev": "cross-env PORT=3000 backpack dev",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
+    "start": "cross-env NODE_ENV=production PORT=3000 node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^2.0.3",
     "@nuxtjs/component-cache": "^1.1.0",
+    "@nuxtjs/pwa": "^2.0.3",
     "axios": "^0.16.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
+    "formidable": "^1.1.1",
     "highlight.js": "^9.12.0",
+    "jsonwebtoken": "^8.1.0",
     "markdown-it": "^8.4.0",
+    "mongodb": "^2.2.26",
     "normalize.css": "^7.0.0",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15",
