--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
   "name": "vueblog",
-  "version": "2.1.0",
-  "description": "A blog system",
-  "author": "wmui",
+  "version": "2.2.0",
+  "description": "A blog system by nuxt.js",
+  "author": "wmui <qq22337383@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env PORT=3000 backpack dev",
+    "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
     "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production PORT=3000 node build/main.js",
+    "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/component-cache": "^1.1.0",
-    "@nuxtjs/pwa": "^2.0.3",
-    "axios": "^0.16.2",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "@koa/cors": "^2.2.1",
+    "axios": "^0.17.1",
     "cross-env": "^5.0.1",
-    "express": "^4.15.3",
     "formidable": "^1.1.1",
     "highlight.js": "^9.12.0",
-    "jsonwebtoken": "^8.1.0",
+    "jsonwebtoken": "^8.1.1",
+    "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.3.0",
+    "koa-static": "^4.0.2",
     "markdown-it": "^8.4.0",
-    "mongodb": "^2.2.26",
-    "normalize.css": "^7.0.0",
-    "nuxt": "^1.0.0-rc3",
-    "source-map-support": "^0.4.15",
-    "top-editor": "^0.0.5"
+    "md5": "^2.2.1",
+    "mongoose": "^5.0.1",
+    "nuxt": "latest",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-url": "^7.3.0",
+    "source-map-support": "^0.4.15"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "backpack-core": "^0.4.1",
-    "eslint": "^4.3.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-latest-node": "^0.4.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "backpack-core": "^0.3.0",
+    "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "nodemon": "^1.11.0",
+    "scmp": "^2.0.0"
   }
 }
