--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.3.0",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "top-editor": "^0.0.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
