--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "@nuxtjs/pwa": "^2.0.5",
     "axios": "^0.17.1",
     "cross-env": "^5.0.1",
     "formidable": "^1.1.1",
@@ -30,7 +31,7 @@
     "postcss-import": "^11.0.0",
     "postcss-url": "^7.3.0",
     "source-map-support": "^0.4.15",
-    "top-editor": "^0.0.5"
+    "top-editor": "^0.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
