--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vueblog",
-  "version": "2.3.2",
-  "description": "A blog system based on Nuxt.js",
+  "name": "essays",
+  "version": "3.0.0-beta1",
+  "description": "A blog system",
   "author": "wmui <qq22337383@gmail.com>",
   "scripts": {
     "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
-    "@nuxtjs/axios": "^5.3.1",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.0.5",
-    "cross-env": "^5.0.1",
+    "axios": "^0.18.0",
     "formidable": "^1.1.1",
-    "highlight.js": "^9.12.0",
     "jsonwebtoken": "^8.1.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "markdown-it": "^8.4.0",
@@ -28,14 +28,14 @@
     "mongoose": "^5.0.1",
     "nodemailer": "^4.6.7",
     "nuxt": "latest",
-    "source-map-support": "^0.4.15",
-    "top-editor": "^0.0.8"
+    "wmui": "0.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-preset-latest-node": "^0.4.0",
     "babel-preset-stage-3": "^6.24.1",
     "backpack-core": "^0.3.0",
+    "cross-env": "^5.0.1",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -47,6 +47,7 @@
     "node-sass": "^4.8.3",
     "nodemon": "^1.11.0",
     "sass-loader": "^7.0.1",
-    "scmp": "^2.0.0"
+    "scmp": "^2.0.0",
+    "source-map-support": "^0.4.15"
   }
 }
