--- a/package.json
+++ b/package.json
@@ -1,53 +1,33 @@
 {
-  "name": "essays",
-  "version": "3.0.0-beta1",
+  "name": "essay",
+  "version": "3.0.0-beta.2",
   "description": "A blog system",
-  "author": "wmui <qq22337383@gmail.com>",
+  "author": "wmui",
+  "private": true,
   "scripts": {
-    "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
-    "build": "nuxt build && backpack build",
-    "start": "cross-env NODE_ENV=production node build/main.js",
-    "precommit": "npm run lint",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "build": "nuxt build",
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "fix": "eslint --fix .js,.vue --ignore-path .gitignore ."
+    "precommit": "npm run lint"
   },
   "dependencies": {
-    "@koa/cors": "^2.2.1",
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/pwa": "^2.0.5",
     "axios": "^0.18.0",
-    "formidable": "^1.1.1",
-    "jsonwebtoken": "^8.1.1",
-    "koa": "^2.4.1",
-    "koa-bodyparser": "^4.2.0",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^7.3.0",
-    "koa-static": "^4.0.2",
-    "markdown-it": "^8.4.0",
-    "md5": "^2.2.1",
-    "mongoose": "^5.0.1",
-    "nodemailer": "^4.6.7",
-    "nuxt": "latest",
-    "wmui": "0.1.0"
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.3",
+    "markdown-it": "^8.4.2",
+    "nuxt": "^2.0.0",
+    "wmui": "^0.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "babel-preset-latest-node": "^0.4.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "backpack-core": "^0.3.0",
-    "cross-env": "^5.0.1",
-    "eslint": "^3.13.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "node-sass": "^4.8.3",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^5.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "node-sass": "^4.10.0",
     "nodemon": "^1.11.0",
-    "sass-loader": "^7.0.1",
-    "scmp": "^2.0.0",
-    "source-map-support": "^0.4.15"
+    "sass-loader": "^7.1.0"
   }
 }
