--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
+    "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.4.0",
     "markdown-it": "^8.4.2",
+    "md5": "^2.2.1",
+    "mongoose": "^5.3.15",
+    "nodemailer": "^4.7.0",
     "nuxt": "^2.0.0",
     "wmui": "^0.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "bunyan": "^1.8.12",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0",
