--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -81,9 +80,12 @@ dist
 .idea
 
 # Other
-NOTE.md
+.note
 
 sw.*
+
+backup/*
+!backup/.gitkeep
 
 server/public/picture/*
 !server/public/picture/.gitkeep
@@ -91,4 +93,5 @@ server/public/picture/*
 server/public/video/*
 !server/public/video/.gitkeep
 
-!server/logs
+logs/*
+!logs/.gitkeep
